# GammaRayServer

./: .gitignore  .gitmodules  Cargo.toml  dash_settings.toml  pr_settings.toml  relay_settings.toml  sd_settings.toml  spvr_settings.toml
base/: Cargo.toml
base/src/: json_util.rs  lib.rs  log_util.rs  system_info.rs
dashboard/: Cargo.toml  build.rs
dashboard/assets/: index.html
dashboard/src/: dash_conn.rs  dash_conn_mgr.rs  dash_context.rs  dash_database.rs  dash_element.rs  dash_group.rs  dash_server.rs  dash_settings.rs  dash_settings.toml  main.rs
id/: Cargo.toml
profile/: Cargo.toml  build.rs
profile/src/: main.rs  pr_context.rs  pr_database.rs  pr_device.rs  pr_device_handler.rs  pr_errors.rs  pr_grpc_server.rs  pr_id_generator.rs  pr_message.rs  pr_server.rs  pr_settings.rs  pr_settings.toml  pr_spvr_client.rs  pr_user.rs
protocol/: Cargo.toml  build.rs
protocol/src/: lib.rs  relay.rs  sd_inner.rs  spvr_inner.rs  spvr_relay.rs
relay/: Cargo.toml  build.rs
relay/src/: main.rs  relay_conn.rs  relay_conn_mgr.rs  relay_context.rs  relay_deploy_client.rs  relay_device_handler.rs  relay_device_mgr.rs  relay_errors.rs  relay_grpc_server.rs  relay_message.rs  relay_proto_maker.rs  relay_queue.rs  relay_room.rs  relay_room_handler.rs  relay_room_mgr.rs  relay_server.rs  relay_settings.rs  relay_settings.toml  relay_spvr_client.rs
relay/src/proto/: tc.rs
single_deploy/: Cargo.toml  build.rs
single_deploy/assets/: index.html
single_deploy/src/: main.rs  sd_conn.rs  sd_conn_mgr.rs  sd_context.rs  sd_server.rs  sd_settings.rs  sd_ui.rs
supervisor/: Cargo.toml  build.rs
supervisor/src/: main.rs  spvr_conn.rs  spvr_conn_mgr.rs  spvr_context.rs  spvr_defs.rs  spvr_errors.rs  spvr_event_mgr.rs  spvr_grpc_client_mgr_trait.rs  spvr_grpc_profile_client.rs  spvr_grpc_profile_client_mgr.rs  spvr_grpc_relay.rs  spvr_grpc_relay_client.rs  spvr_grpc_relay_client_mgr.rs  spvr_handler_device.rs  spvr_handler_server.rs  spvr_profile_handler.rs  spvr_relay_client.rs  spvr_relay_handler.rs  spvr_server.rs  spvr_server_handler.rs  spvr_settings.rs  spvr_settings.toml  svpr_ui.rs
sysinfo/: Cargo.toml
sysinfo/src/: main.rs
