[package]
name = "gr_profile_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
protocol = {path = "../protocol"}

axum = "0.8.1"
serde = { version = "1.0.218", features = ["derive"] }
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
mongodb = "3.2.1"
futures-util = "0.3.31"
uuid = { version = "1.15.1",features = ["v4", ] }
rand = "0.9.0"
tokio-tungstenite = "0.26.2"
prost = "0.13.5"
lazy_static = "1.5.0"