[package]
name = "gr_relay_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rustls = { version = "0.23", features = ["ring"] }
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2", "tokio-rustls-comp"] }