[package]
name = "gr_relay_server"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
protocol = {path = "../protocol"}

rustls = { version = "0.23", features = ["ring"] }
redis = { version = "0.29.1", features = ["tokio-comp", "r2d2", "tokio-rustls-comp"] }
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.43.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std"] }
tracing-appender = "^0"
tracing-log = "0.2.0"
mongodb = "3.2.1"
futures-util = "0.3.31"
uuid = { version = "1.15.1",features = ["v4", ] }
rand = "0.9.0"
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
headers = "0.4.0"
prost = "0.13.5"
prost-types = { version = "0.13.5", optional = true }
tonic = "0.12.3"
tokio-cron-scheduler = "0.13.0"
time = "0.3.37"
tokio-stream = "0.1.17"
lazy_static = "1.5.0"
sysinfo = "0.33.1"
h2 = "0.4.8"

[build-dependencies]
prost-build = "0.13.5"