[package]
name = "gr_single_deploy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
protocol = {path = "../protocol"}

md5 = "0.7.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.1"
log = "0.4.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std"] }
tracing-appender = "^0"
tracing-log = "0.2.0"
toml = "0.8.20"
tokio = { version = "1.43.0", features = ["full"] }
egui = "0.31.1"
eframe = "0.31.1"
egui_extras = { version = "*", features = ["all_loaders"] }
image = { version = "0.25", features = ["jpeg", "png"] } # Add the types you want support for
rusty-leveldb = "3.0.2"
clap = { version = "4.5.38", features = ["derive"] }
lazy_static = "1.5.0"
axum = { version = "0.8.1", features = ["ws"] }
axum-extra = { version = "0.10.0", features = ["typed-header"] }
tower = { version = "0.5", features = ["full"] }
tower-http = { version = "0.6.2", features = ["full"] }
headers = "0.4.0"
futures-util = "0.3.31"
prost = "0.13.5"