[package]
name = "gr_sysinfo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base = {path = "../base"}
md5 = "0.7.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
sysinfo = "0.35.1"
log = "0.4.26"
tracing = "0.1"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "std"] }
tracing-appender = "^0"
tracing-log = "0.2.0"